--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -16,9 +16,9 @@
             alt="Logo O Burguês">
         <nav>
             <a id="botao" href="#logo"><strong>Bem-Vindo</strong></a>
-            <a id="botao" href="#frase1"><strong>Quem Somos</strong></a>
+            <a id="botao" href="#frase1"><strong>Quem Somos?</strong></a>
             <a id="botao" href="#lojas"><strong>Lojas</strong></a>
-            <a id="botao" href="#cardapio"><strong>Cardápio</strong></a>
+           <a  id="botao" href="cardapio.html" target="_blank"><strong>Cardápio</strong></a>
             <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
             <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
             </a>
@@ -38,7 +38,7 @@
         <hr id="linha">
 
         <section id="quem-somos">
-            <h3><b id="frase1">QUEM SOMOS </b><br>
+            <h3><b id="frase1">QUEM SOMOS? </b><br>
                 <p></p>
                 <b id="h2">O Burguês é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!
                 <p></p>
