consertando as img do cardápio pt 2

--- a/cardapio.html
+++ b/cardapio.html
@@ -17,28 +17,28 @@
     <section id="cardapio">
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; padding: 20px;">
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\456881261_1724569375019748_4628731805975508229_n.jpg"  alt="American Chicken" width="100%" style="border-radius: 10px;">
+            <img src="imagens/456881261_1724569375019748_4628731805975508229_n.jpg"  alt="American Chicken" width="100%" style="border-radius: 10px;">
             <h3>American Chicken</h3>
             <p>Frango Empanado, Queijo Mussarela, Alface Americana, Picles de Pepino, Molho a sua escolha e Tudo isso no pão brioche</p>
             <strong>R$ 29,90</strong>
         </div>
 
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457018579_519335344006953_2579318147507496788_n.jpg" alt="Burger Clássico" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457018579_519335344006953_2579318147507496788_n.jpg" alt="Burger Clássico" width="100%" style="border-radius: 10px;">
             <h3>Clássico</h3>
             <p>Carne 180g, cheddar duplo, bacon crocante, cebola caramelizada.</p>
             <strong>R$ 34,90</strong>
         </div>
 
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457257238_865974362133289_2550781275651349189_n.jpg" alt="Costela Creamy" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457257238_865974362133289_2550781275651349189_n.jpg" alt="Costela Creamy" width="100%" style="border-radius: 10px;">
             <h3>Costela Creamy</h3>
             <p>Blend de 180g de Costela, Cream cheese, Alho Crocante, Cebola no shoyu, Mollho a sua escolha,Tudo montado no pão brioche</p>
             <strong>R$ 31,90</strong>
         </div>
 
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457022564_485837667570122_1376005797323809782_n.jpg" alt="Costela Angus" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457022564_485837667570122_1376005797323809782_n.jpg" alt="Costela Angus" width="100%" style="border-radius: 10px;">
             <h3>Costela Angus</h3>
             <p>180g De Costela Bovina Angus, Queijo
              Cheddar, Alface Americana, Bacon Em Cubos, Pico De Gallo E Molho À Sua Escolha No Pão Brioche.</p>
@@ -46,14 +46,14 @@
         </div>
 
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457281214_1243798510113364_8484507634713217653_n.jpg" alt="Cheese crispy" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457281214_1243798510113364_8484507634713217653_n.jpg" alt="Cheese crispy" width="100%" style="border-radius: 10px;">
             <h3>Cheese crispy</h3>
             <p>110g do blend burguês, queijo empanado crocante da seara, farofa de bacon, molho a sua escolha no pão de brioche.</p>
             <strong>R$ 41,90</strong>
         </div>
 
         <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457132184_8125801310792444_2026918450704921741_n.jpg" alt="Frango Cream Cheese" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457132184_8125801310792444_2026918450704921741_n.jpg" alt="Frango Cream Cheese" width="100%" style="border-radius: 10px;">
             <h3>Frango Cream Cheese</h3>
             <p>Frango Empanado, Queijo Muçarela, Cream Cheese, Alho
             Crocante, Cebola Roxa, Tomate E Alface Americana No Pão brioche</p>
@@ -68,21 +68,21 @@
         </div>
 
          <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\456559587_1176813483607529_5187894326773792844_n.jpg" alt="Costela Gorgonzola" width="100%" style="border-radius: 10px;">
+            <img src="imagens/456559587_1176813483607529_5187894326773792844_n.jpg" alt="Costela Gorgonzola" width="100%" style="border-radius: 10px;">
             <h3>Costela Gorgonzola</h3>
             <p> 180g Blend Costela, Cebola Crispy, Creme De Gorgonzola E Molho A Sua Escolha No Pão Brioche. </p>
             <strong>R$ 35,90</strong>
         </div>
 
          <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\456879902_483612124457922_5731631353008052517_n.jpg" alt="Gran Tradicional" width="100%" style="border-radius: 10px;">
+            <img src="imagens/456879902_483612124457922_5731631353008052517_n.jpg" alt="Gran Tradicional" width="100%" style="border-radius: 10px;">
             <h3>Gran Tradicional</h3>
             <p></p> 180g De Blend Burguês, Queijo Muçarela, Cebola Roxa, Alface Americana, Tomate E Molho À Sua Escolha No Pão Brioche. </p>
             <strong>R$ 37,90</strong>
         </div>
 
          <div style="background: white; color: black; border-radius: 20px; padding: 20px; width: 300px;">
-            <img src="C:\Users\bielt\OneDrive\Documentos\GitHub\projetodaniel\imagens\457126883_1719121988626404_5180914323847251039_n.jpg" alt="Veggie" width="100%" style="border-radius: 10px;">
+            <img src="imagens/457126883_1719121988626404_5180914323847251039_n.jpg" alt="Veggie" width="100%" style="border-radius: 10px;">
             <h3>Veggie</h3>
             <p></p> 180g De Blend Burguês, Queijo Mussarela, Cebola Roxa, Alface Americana, Tomate E Molho À Sua Escolha No Pão Brioche. </p>
             <strong>R$ 32,90</strong>
