rodapé do cardápio

--- a/cardapio.html
+++ b/cardapio.html
@@ -6,6 +6,7 @@
     <title>O Burgues - Nosso Cardápio</title>
     <link rel="icon" href="imagens/logo_burgues_laranja_2 (1).png" type="image/png">
     <link rel="stylesheet" href="cardapio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -87,19 +88,24 @@
             <p></p> 180g De Blend Burguês, Queijo Mussarela, Cebola Roxa, Alface Americana, Tomate E Molho À Sua Escolha No Pão Brioche. </p>
             <strong>R$ 32,90</strong>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
+</section>
+<section>
+        <footer>
+                <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
+                <p></p>
+                &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
+                <p></p>
+                <hr>
+                Compartilhe algo Delicioso
+                <p></p>
+                <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
+                 <i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/hamburgueriaoburgues" target="_blank">
+                 <i class="fab fa-facebook"></i></a>
+                <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
+                 <i class="fab fa-tiktok"></i></a>
+                <h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5>
+        </footer>
 </section>
     
 </body>
