--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -17,7 +17,7 @@
             alt="Logo O Burguês">
         <nav>
             <a id="botao" href="#logo"><strong>Bem-Vindo</strong></a>
-            <a id="botao" href="#frase1"><strong>Quem Somos?</strong></a>
+            <a id="botao" href="#frase1"><strong>Quem Somos</strong></a>
             <a id="botao" href="#lojas"><strong>Lojas</strong></a>
            <a  id="botao" href="cardapio.html" target="_blank"><strong>Cardápio</strong></a>
             <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
@@ -38,7 +38,7 @@
         <hr id="linha">
 
         <section id="quem-somos">
-            <h3><b id="frase1">QUEM SOMOS? </b><br>
+            <h3><b id="frase1">QUEM SOMOS</b><br>
                 <p></p>
                 <b id="h2">O Burguês é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!
                 <p></p>
@@ -63,32 +63,70 @@
             <b  style="text-align: left;"  id="h2">Estamos presentes em 14 estados brasileiros, levando o sabor do O Burguês para você. Confira nossas lojas e venha nos visitar!</h2 ></b>
         </div>   
            
-            <nav id="imagemdaloja" >
-                <img style="text-align: center;" src="https://i.im.ge/2025/05/20/vKhn8G.inal.png" alt="foto.png" width="1000" height="500"  >
-                <br><br><br><br>
-            </nav>
+        <nav id="imagemdaloja" >
+            <img style="text-align: center;" src="https://i.im.ge/2025/05/20/vKhn8G.inal.png" alt="foto.png" width="800" height="400"  >
+            <br><br><br><br>
+        </nav>
+        <hr id="linha">
+        <nav>
+            <form class="formulario" action="#" method="post">
+                <h2>SEJA MEMBRO</h2>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required placeholder="Seu nome completo">
 
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required placeholder="seu@email.com">
 
-        
-             <hr id="linha">
-       <nav>
-        <form class="formulario" action="#" method="post">
-            <h2>Fale Conosco</h2>
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required placeholder="Seu nome completo">
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone" name="telefone" required placeholder="(99) 99999-9999">
 
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required placeholder="seu@email.com">
-
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" required placeholder="(99) 99999-9999">
-
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="5" required placeholder="Digite sua mensagem"></textarea>
-
-            <button type="submit">Enviar</button>
+                <label for="estado">Localização:</label>
+                <select id="estado" name="estado" required>
+                <option value="" disabled selected>Selecione sua cidade</option>
+                <option value="paraiba-pb">João Pessoa - PB</option>
+                <option value="sao-paulo-sp">São Paulo - SP</option>
+                <option value="rio-de-janeiro-rj">Rio de Janeiro - RJ</option>
+                <option value="bahia-ba">Salvador - BA</option>
+                <option value="minas-gerais-mg">Belo Horizonte - MG</option>
+                <option value="espirito-santo-es">Vitória - ES</option>
+                <option value="parana-pr">Curitiba - PR</option>
+                <option value="ceara-ce">Fortaleza - CE</option>
+                <option value="goias-go">Goiânia - GO</option>
+                <option value="distrito-federal-df">Brasília - DF</option>
+                <option value="rio-grande-do-sul-rs">Porto Alegre - RS</option>
+                <option value="santa-catarina-sc">Blumenau - SC</option>
+                </select>
+                <button type="submit">Enviar</button>
         </form>
-       </nav>
+            <script>
+                document.querySelector('.formulario').addEventListener('submit', function(event) {
+                // Pega os campos
+                const nome = document.getElementById('nome').value.trim();
+                const email = document.getElementById('email').value.trim();
+                const telefone = document.getElementById('telefone').value.trim();
+                const estado = document.getElementById('estado').value.trim();
+
+                // Expressão regular simples para validar e-mail
+                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+                // Validação dos campos
+                if (!nome || !email || !telefone || !estado) {
+                    alert('Por favor, preencha todos os campos.');
+                    event.preventDefault();
+                    return;
+                }
+
+                if (!emailRegex.test(email)) {
+                    alert('Por favor, insira um e-mail válido.');
+                    event.preventDefault();
+                    return;
+                }
+
+                // Se tudo estiver ok, o formulário será enviado normalmente
+                alert('Mensagem enviada com sucesso!');
+            });
+            </script>
+        </nav>
         <footer>
                 <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
                 <p></p>
