--- a/cardapio.html
+++ b/cardapio.html
@@ -92,7 +92,7 @@
     </div>
     </section>
     <footer>
-    <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês" width="150px" height="100px">
+    <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
     <p></p>
     &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
     <p></p>
@@ -108,7 +108,7 @@
     <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
         <i class="fab fa-tiktok"></i>
     </a>
-    <h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5>
+    <p><h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5></p>
 </footer>
 </body>
 </html>
