--- a/cardapio.html
+++ b/cardapio.html
@@ -90,6 +90,58 @@
             <strong>R$ 32,90</strong>
         </div>
     </div>
+ 
+ 
+ 
+ 
+    <!-- Bebidas -->
+<h2 style="text-align:center; margin-top: 40px; color: white;">Bebidas</h2>
+<div id="corpo">
+    <div id="hamburguer">
+        <img id="foto" src="imagens/refrigerante-lata.jpg" alt="Coca-Cola Lata">
+        <h3>Coca-Cola Lata</h3>
+        <p>Geladinha pra acompanhar seu burguer favorito.</p>
+        <strong>R$ 6,00</strong>
+    </div>
+    <div id="hamburguer">
+        <img id="foto" src="imagens/guarana.jpg" alt="Guaraná Antarctica Lata">
+        <h3>Guaraná Antarctica</h3>
+        <p>O clássico brasileiro que não pode faltar.</p>
+        <strong>R$ 6,00</strong>
+    </div>
+    <div id="hamburguer">
+        <img id="foto" src="imagens/350036---Bebida-Energetica-Red-Bull-355ml-1.webp" alt="Redbull">
+        <h3>Red bull</h3>
+        <p>Opção de energético para quem precisa se manter ativo!</p>
+        <strong>R$ 8,00</strong>
+    </div>
+</div>
+
+<!--Acompanhamentos -->
+<h2 style="text-align:center; margin-top: 40px; color: white;">Acompanhamentos</h2>
+<div id="corpo">
+    <div id="hamburguer">
+        <img id="foto" src="imagens/622291-batata-airfryer-extra-croc-mccain_3.webp" alt="Batata Frita">
+        <h3>Batata Frita</h3>
+        <p>Porção média de batata frita crocante com sal.</p>
+        <strong>R$ 24,00</strong>
+    </div>
+    <div id="hamburguer">
+        <img id="foto" src="imagens/5d2cb094b44ce72d3e3baa89.webp" alt="Onion Rings">
+        <h3>Onion Rings</h3>
+        <p>Anéis de cebola empanados e crocantes.</p>
+        <strong>R$ 27,00</strong>
+    </div>
+    <div id="hamburguer">
+        <img id="foto" src="imagens/mandioca-frita.jpg" alt="Mandioca">
+        <h3>Mandioca frita</h3>
+        <p>Porção média de mandioca frita crocante.</p>
+        <strong>R$ 20,00</strong>
+    </div>
+</div>
+
+
+
     </section>
     <footer>
     <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
