--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -37,19 +37,16 @@
         </section>
         <hr id="linha">
 
+
        <section id="quem-somos">
-       <div class="container">
-       <div class="texto">
-       <h2><strong>QUEM SOMOS?</strong></h2>
-       <p><strong>O Burguês</strong> é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</p>
-
-       <p>Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.</p>
-
-       <p>Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.</p>
-
-       <p>Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.</p>
-
-       <p>Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial e delivery. Ideal para quem busca alta lucratividade em um modelo enxuto.</p>
+  <div class="container">
+    <div class="texto">
+      <h2><strong>QUEM SOMOS?</strong></h2>
+      <p><strong>O Burguês</strong> é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</p>
+      <p>Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.</p>
+      <p>Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.</p>
+      <p>Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.</p>
+      <p>Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca alta lucratividade em um modelo enxuto.</p>
     </div>
 
     <div class="imagem">
@@ -57,6 +54,7 @@
     </div>
   </div>
 </section>
+
         <hr id="linha">
         
         <div id="lojas">
