--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -46,7 +46,7 @@
       <p>Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.</p>
       <p>Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.</p>
       <p>Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.</p>
-      <p>Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca alta lucratividade em um modelo enxuto.</p>
+      <p>Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca altas lucratividades em um modelo enxuto.</p>
     </div>
 
     <div class="imagem">
