--- a/ProjetoDeFato.html
+++ b/ProjetoDeFato.html
@@ -41,12 +41,13 @@
       <div class="container">
       <div class="texto">
       <h2 class="frase1">QUEM SOMOS?</h2>
-      <p><b id="h2">O Burguês</b> é mais do que uma hamburgueria — é um lugar onde a paixão pela comida se encontra com a criatividade. Nossos hambúrgueres são preparados com ingredientes frescos e de alta qualidade, feitos com amor e dedicação. Cada mordida é uma explosão de sabor que vai te deixar querendo mais!</p>
-      <p>Criado com o intuito de inovar o mercado de hamburguerias no Rio de Janeiro, o Burguês iniciou sua operação com uma loja em fevereiro de 2017.</p>
-      <p>Produtos de alta qualidade, aliados a um modelo de negócio com gestão simples e baixo risco, fizeram a marca superar as expectativas do segmento e alcançar, em apenas cinco anos, um crescimento meteórico — com 51 franquias inauguradas.</p>
-      <p>Hoje, O Burguês se consolida como a maior hamburgueria delivery do Brasil, com lojas também no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná.</p>
-      <p>Uma hamburgueria que é sinônimo de qualidade e inovação no mercado, com foco em lojas com atendimento presencial com delivery. Ideal para quem busca altas lucratividades em um modelo enxuto.</p>
+     <h3>O Burguês não é só uma hamburgueria, é o resultado da paixão por comida e muita criatividade! Nossos hambúrgueres são feitos com ingredientes frescos e de primeira, com tanto carinho e dedicação que cada mordida é uma explosão de sabor que te deixa com água na boca.
+
+Nascida no Rio de Janeiro em fevereiro de 2017, a ideia era inovar o mercado de hambúrgueres. Com produtos de alta qualidade e um modelo de negócio fácil de gerenciar e com pouco risco, O Burguês superou todas as expectativas. Em apenas cinco anos, o crescimento foi meteórico: 51 franquias abertas!
+
+Hoje, O Burguês se tornou a maior hamburgueria delivery do Brasil, com unidades no Ceará, Bahia, Minas Gerais, Espírito Santo, São Paulo e Paraná. Somos sinônimo de qualidade e inovação, com foco tanto no atendimento presencial quanto no delivery. É o negócio ideal para quem busca alta lucratividade em um modelo de sucesso.</h3>
     </div>
+
 
     <div class="img">
       <img src="https://media.istockphoto.com/id/1253501430/pt/foto/delivery-biker-arriving-at-destination-motogirl.jpg?s=612x612&w=0&k=20&c=PM-uO1C3BBuGNkQ52CIr8lC_5vFrfjm_g4R8NEPJmzE=" alt="Entrega de hambúrguer em motocicleta">
