ultimos detalhes do cardápio do site

--- a/cardapio.html
+++ b/cardapio.html
@@ -13,6 +13,7 @@
     <header>
         <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo Burgues ">
         <div class="cardapio-boasvindas">
+            
             <h1>Seja Bem-Vindo ao nosso cardápio!</h1>
         </div>
     </header> 
@@ -95,7 +96,7 @@
  
  
     <!-- Bebidas -->
-<h2 style="text-align:center; margin-top: 40px; color: white;">Bebidas</h2>
+<h2 style="color: #E65100">Bebidas:</h2>
 <div id="corpo">
     <div id="hamburguer">
         <img id="foto" src="imagens/refrigerante-lata.jpg" alt="Coca-Cola Lata">
@@ -118,7 +119,7 @@
 </div>
 
 <!--Acompanhamentos -->
-<h2 style="text-align:center; margin-top: 40px; color: white;">Acompanhamentos</h2>
+<h2 style=" color: #E65100">Acompanhamentos:</h2>
 <div id="corpo">
     <div id="hamburguer">
         <img id="foto" src="imagens/622291-batata-airfryer-extra-croc-mccain_3.webp" alt="Batata Frita">
@@ -139,9 +140,11 @@
         <strong>R$ 20,00</strong>
     </div>
 </div>
-
-
-
+<div>
+        <a href="https://www.ifood.com.br/delivery/joao-pessoa-pb/o-burgues---burger-joao-pessoa-manaira/72015415-2e15-4496-92b7-003cc10161e1" target="_blank">
+            <button><ins><b>FAÇA SEU PEDIDO</b></ins></button>
+            </a>
+</div>
     </section>
     <footer>
     <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
