--- a/obrigado.html
+++ b/obrigado.html
@@ -21,7 +21,7 @@
                 Recebemos sua mensagem e em breve nossa equipe entrará em contato.<br>
                 Enquanto isso, fique à vontade para explorar nosso <a id="cardapio-link" href="cardapio.html" >cardápio</a> ou nos seguir nas redes sociais!
             </p>
-            <div id="social-media-links"">
+            <div id="social-media-links">
                 <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
