--- a/cardapio.html
+++ b/cardapio.html
@@ -147,23 +147,12 @@
 </div>
     </section>
     <footer>
-    <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
-    <p></p>
-    &copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.
-    <p></p>
-    <hr>
-    Compartilhe algo Delicioso
-    <p></p>
-    <a href="https://www.instagram.com/hamburgueriaoburgues/" target="_blank">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://www.facebook.com/hamburgueriaoburgues" target="_blank">
-        <i class="fab fa-facebook"></i>
-    </a>
-    <a href="https://www.tiktok.com/@oburgueshamburgueria" target="_blank">
-        <i class="fab fa-tiktok"></i>
-    </a>
-    <p><h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5></p>
+        <img src="imagens/logo_burgues_laranja_2 (1).png" alt="Logo O Burguês">
+        <p id="footer">&copy; 2025 <strong>O Burguês</strong>. Todos os direitos reservados.</p>
+        <p id="footer"></p>
+        <hr>
+        <p id="footer"></p>
+        <p><h5>Sujeito à disponibilidade em estoque. Imagens meramente ilustrativas.</h5></p>
 </footer>
 </body>
 </html>
