--- a/obrigado.html
+++ b/obrigado.html
@@ -32,7 +32,7 @@
                     <i class="fab fa-tiktok"></i>
                 </a>
             </div>
-            <a id="voltar-link" href="index.html">Voltar para a página inicial</a>
+            <a id="voltar-link" href="ProjetoDeFato.html">Voltar para a página inicial</a>
         </div>
     </main>
     <footer>
